fix: image block aligned left or right overlay on the block chooser (#291)

--- a/src/theme/_cms-ui.scss
+++ b/src/theme/_cms-ui.scss
@@ -418,6 +418,14 @@ body.cms-ui {
         z-index: 0;
       }
     }
+    &.image {
+      .block.align {
+        &.left,
+        &.right {
+          z-index: 0;
+        }
+      }
+    }
   }
 
   a {
